// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Snapshot Testing. Throws error: Array does not have either two or three elements 1`] = `
"[2mexpect([22m[31m[longitude, latitude, (altitude)][39m[2m).isValidCoordinate()[22m

Coordinate must be an array of either two or three elments.

Received:  [31m[0, 0, 0, 0][39m"
`;

exports[`Error Snapshot Testing. Throws error: Invalid input to matcher 1`] = `
"[2mexpect([22m[31m[longitude, latitude, (altitude)][39m[2m).isValidCoordinate()[22m

Coordinate must be an array of either two or three elments.

Received:  [31mfalse[39m"
`;

exports[`Error Snapshot Testing. Throws error: Valid use case passes 1`] = `
"[2mexpect([22m[31m[longitude, latitude, (altitude)][39m[2m).not.isValidCoordinate()[22m

Expected input to not be a two or three element array with longitude between (-90 to 90), 
        latitude between (-180 to 180), and (if a 3D coordinate) numeric altitude.

Received:  [31m[0, 0][39m"
`;
